--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "antd": "^5.20.6",
     "next": "14.2.8",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
