--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "antd": "^5.20.6",
+    "firebase": "^10.13.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dnd": "^16.0.1",
