--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "antd": "^5.20.6",
     "firebase": "^10.13.1",
+    "framer-motion": "^11.5.4",
     "next": "14.2.8",
     "react": "^18",
     "react-dnd": "^16.0.1",
